Home content issue, if we add html text as content, home page is not showing well. issues found at client location.

--- a/TaxGenieOnline/TaxGenie.master
+++ b/TaxGenieOnline/TaxGenie.master
@@ -145,7 +145,7 @@
                     <asp:Repeater ID="dlLGuest" runat="server">
                         <ItemTemplate>
                             <a class="rss-item" href='/ViewContent.aspx?Id=<%# Eval("Id") %>'>
-                            <%# Eval("Data") %>...</a>
+                            <%# Eval("Title") %>...</a>
                         </ItemTemplate>
                     </asp:Repeater>
                 </div>
@@ -223,7 +223,7 @@
                     <asp:Repeater ID="dlRGuest" runat="server">
                         <ItemTemplate>
                             <a class="rss-item" href='/ViewContent.aspx?Id=<%# Eval("Id") %>'>
-                            <%# Eval("Data") %>...</a>
+                            <%# Eval("Title") %>...</a>
                         </ItemTemplate>
                     </asp:Repeater>
                 </div>
