department news chanaged to show only eading

--- a/TaxGenieOnline/TaxGenie.master
+++ b/TaxGenieOnline/TaxGenie.master
@@ -174,7 +174,7 @@
                             <ItemTemplate>
                                 <li class="rss-item">
                                     <a class="rss-item" href='/ViewContent.aspx?Id=<%# Eval("Id") %>'>
-                                    <%# Eval("Title") %></a>&nbsp;<%# Eval("Data") %>...</li>
+                                    <%# Eval("Title") %></a>...</li>
                             </ItemTemplate>
                         </asp:Repeater>
                     </ul>
