--- a/TaxGenieOnline/TaxGenie.master
+++ b/TaxGenieOnline/TaxGenie.master
@@ -192,8 +192,8 @@
                     <img src="images/slogo.png" align="absmiddle" /> Biz News</div>
                 <div class="brdhds">
                 </div>
-                <div class="src1">
-                    <marquee direction="up" scrollamount="3" style="height: 151px" onmouseover='this.stop();' onmouseout='this.start();'> 
+                <div class="src1" >
+                    <marquee direction="up" scrollamount="3" style="height: 151px; onmouseover='this.stop();' onmouseout='this.start();'> 
                     <script language="JavaScript" src="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fwww.moneycontrol.com%2Frss%2Feconomy.xml&num=5&desc=90>1&targ=y&utf=y"  charset="UTF-8" type="text/javascript"></script>
                     <noscript>
                       <a href="http://feed2js.org//feed2js.php?src=http%3A%2F%2Fwww.moneycontrol.com%2Frss%2Feconomy.xml&num=5&desc=90>1&targ=y&utf=y&html=y">View RSS feed</a>
