--- a/TaxGenieOnline/stylesheets/ddsmoothmenu.css
+++ b/TaxGenieOnline/stylesheets/ddsmoothmenu.css
@@ -120,27 +120,23 @@ float: none;
 background-color:#fff;
 border-bottom:1px dotted #e0e0e0;
 background-image:none;
-height:33px;
-padding-left:10px;
-padding-right:11px;
+padding:0px 10px 8px 10px;
+
 
 }
 .ddsmoothmenu ul li ul li a{
-
-height:33px;
 color:#fa9414;
 text-shadow:none;
 font-size:10px; 
 }
 .ddsmoothmenu ul li ul li a:hover, .ddsmoothmenu ul li ul li a.selected{
-height:33px;
 background-image:none;
 color:#419023;
 text-shadow:none;
 border-top:none;
 padding-left:10px;
 padding-right:11px;
-height:33px;
+
 
 }
 
@@ -156,15 +152,15 @@ border-top:1px solid #e0e0e0;
 
 /* Sub level menu links style */
 .ddsmoothmenu ul li ul li a{
-font: normal 13px Verdana;
+font: normal 13px arial;
 width: 175px; /*width of sub menus*/
-padding: 10px 0px 0px 10px;
+padding: 8px 0px 0px 10px;
 margin: 0;
 border-top-width: 0;
 color:#fa9414;
-	font-size:11px; 
-	text-transform:none;
-	z-index:150 !important;
+font-size:11px; 
+text-transform:none;
+z-index:150 !important;
 }
 
 /* Holly Hack for IE \*/
