--- a/TaxGenieOnline/stylesheets/stylesheet.css
+++ b/TaxGenieOnline/stylesheets/stylesheet.css
@@ -278,7 +278,7 @@ ol, ul
 .srcright p a
 {
     color: #888888;
-    font-family: verdana;
+    font-family: Arial;
     font-size: 11px;
     line-height: 1.6em;
     display: block;
@@ -290,7 +290,7 @@ ol, ul
 .lnk
 {
     color: #888888;
-    font-family: verdana;
+    font-family: Arial;
     font-size: 11px;
 }
 .lnk p:hover
@@ -337,15 +337,15 @@ ol, ul
 {
     padding-bottom: 10px;
     color: #333;
-    font-family: verdana;
+    font-family: Arial;
     font-size: 12px;
-    line-height: 1.9em;
+    line-height: 18px;
     text-align: justify;
     padding: 0px 10px 15px 10px;
 }
 .ab p b
 {
-    font: bold 11px verdana;
+    font: bold 11px Arial;
 }
 .ab ul
 {
@@ -354,7 +354,7 @@ ol, ul
 .ab ul li
 {
     padding-bottom: 10px;
-    font-family: verdana;
+    font-family: Arial;
     font-size: 12px;
     font-weight: bold;
     padding-left: 20px;
@@ -415,10 +415,12 @@ ol, ul
 {
     font-size: 14px;
     font-weight: bold;
+    color:#FA9414;
 }
 .copyright
 {
-    width: 100%;
+    width: 980px;
+    margin:0 auto;
 }
 .copyright p
 {
@@ -520,7 +522,7 @@ input.nll
 
 .nlsH
 {
-    font-family: Verdana;
+    font-family: Arial;
     font-size: 18px;
     color: #002700;
     padding: 0px;
@@ -530,7 +532,7 @@ input.nll
 }
 .nlsHl
 {
-    font-family: Verdana;
+    font-family: Arial;
     font-size: 18px;
     color: #002700;
     padding: 7px;
@@ -546,7 +548,7 @@ input.nll
 
 .nlsStatic
 {
-    font-family: Verdana;
+    font-family: Arial;
     font-size: 15px;
     color: #555555;
     padding: 3px;
@@ -749,8 +751,8 @@ input.nls
 {
     color: #333;
     text-align: center;
-    font-family: "Trebuchet MS" , Arial, Helvetica, sans-serif;
-    font-size: 15px;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 12px;
     display: block;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -804,7 +806,7 @@ input.nls
 
 .frontraquo
 {
-    font: bold 13px verdana,helvetica,arial,sans-serif;
+    font: bold 13px Arial,helvetica,arial,sans-serif;
 }
 
 /* blog feed CSS */
@@ -814,7 +816,7 @@ input.nls
 }
 .rss-item
 {
-    font-family: verdana, arial, sans-serif;
+    font-family: Arial, arial, sans-serif;
     line-height: 1.25;
     font-size: 11px;
 }
@@ -899,7 +901,7 @@ li.rss-item
     padding-bottom: 10px;
     color: #555;
     font: normal 11px Arial;
-    line-height: 1.6em;
+    line-height:18px;
     text-align: justify;
     padding: 5px;
     height: 153px;
